# reason-tree

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/agents/: reasontree-critic.md  reasontree-proposer.md  reasontree-scorer.md  reasontree-simulator.md
.claude/workflows/: reasontree-deep.js  reasontree-verify.js
benchmarks/chess/: lichess_1800_2000_v1.json  lichess_2200_2300_v1.json
benchmarks/everyday/: comparison-experiments.json  usecase-raw-alerts.json  usecase-raw-bughunt.json  usecase-tree-alerts-output.txt  usecase-tree-bughunt.json
demo/: reasontree_demo_report.html
docs/: CASE_STUDY.md  CHESS_BENCHMARK.md  architecture.md  chess_puzzle_set.md  evaluation_plan.md  llm_mcts_literature_notes.md  medium_article_draft.md  reasontree_algorithm_options.md  reasontree_design_brainstorm.md  reasontree_use_cases.md  research_context.md
docs/examples/: rescue-03kkE.html  rescue-03kkE.spec.json  why-give-a-model-a-tree.html
evals/: README.md  chess_puzzle_answer_key.json
evals/prompts/: chess_mate2_direct.md  chess_mate2_reasontree_skill.md  (+4 more)
examples/: correlated-alerts.json
logs/: reasontree_demo-planning.jsonl  reasontree_demo.jsonl
scripts/: chess_mate_search.py  prepare_lichess_benchmark.py  render_showcase_boards.py  run_claude_eval.py  run_claude_text_eval.py  summarize_chess_benchmark.py
tests/: test_check_cli.py  test_chess_benchmark.py  test_chess_mate_search.py  test_chess_tree.py  test_dependence_bounds.py  test_engine.py  test_reasontree.py  test_reasontree_engine.py  test_state_search.py  test_tree_artifact.py
(+53 files in other folders)
