[project]
name = "reasontree"
version = "0.1.0"
description = "Model-guided tree search for Claude."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "chess>=1.11.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
reasontree = "reasontree.reasontree:main"
