[project]
name = "reasontree"
version = "0.3.0"
description = "Provider-neutral executable state-action search and verification control for fast models."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "chess>=1.11.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
reasontree = "reasontree.engine:main"
reasontree-check = "reasontree.check_cli:main"
reasontree-chess-eval = "reasontree.chess_benchmark:main"
reasontree-chess-tree = "reasontree.chess_tree:main"
reasontree-demo = "reasontree.cli:main"
